--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,4 +1,6 @@
 include includes/head.pug
 body
   h1 Gulp Starter Kit
-  p Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque non quae provident blanditiis repellendus nostrum vero accusantium dicta exercitationem quisquam eveniet dolorum, impedit optio corporis mollitia, doloribus repudiandae pariatur laboriosam!
+  p Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora enim nihil nobis magni ducimus architecto consectetur laborum unde, vel praesentium optio modi dicta alias iusto cum aliquid neque. Ipsum, neque.
+
+  script(src="assets/js/script.js")
