Added bootstrap files to sass/vendors folder, fixed a bug where the browser didn't reload after changes made to a scss file, added README

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -1,6 +1,7 @@
 include includes/head.pug
 body
-  h1 Gulp Starter Kit
-  p Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora enim nihil nobis magni ducimus architecto consectetur laborum unde, vel praesentium optio modi dicta alias iusto cum aliquid neque. Ipsum, neque.
+  .container.my-5
+    h1 Gulp Starter Kit
+    p Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora enim nihil nobis magni ducimus architecto consectetur laborum unde, vel praesentium optio modi dicta alias iusto cum aliquid neque. Ipsum, neque.
 
   script(src="assets/js/script.js")
